--- a/src/main/resources/view/admin/admin-student-form.fxml
+++ b/src/main/resources/view/admin/admin-student-form.fxml
@@ -12,11 +12,8 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane fx:id="rootNode" prefHeight="616.0" prefWidth="635.0" style="-fx-background-radius: 10;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.admin.AdminStudentFormController">
+<AnchorPane fx:id="rootNode" prefHeight="616.0" prefWidth="635.0" style="-fx-background-radius: 10;" stylesheets="@../../assets/styles/userManagement.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.admin.AdminStudentFormController">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#74b9ff" height="63.0" layoutX="-125.0" layoutY="76.0" stroke="#74b9ff" strokeType="INSIDE" width="200.0" />
-      <Circle fill="#74b9ff" layoutX="35.0" layoutY="-6.0" radius="118.0" stroke="#74b9ff" strokeType="INSIDE" />
       <Circle fill="#74b9ff" layoutX="280.0" layoutY="143.0" radius="81.0" stroke="#74b9ff" strokeType="INSIDE" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#74b9ff" height="87.0" layoutX="278.0" layoutY="62.0" stroke="#74b9ff" strokeType="INSIDE" width="346.0" />
       <Text layoutX="10.0" layoutY="45.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student Manage Form">
@@ -35,8 +32,8 @@
         </columns>
       </TableView>
       <TextField fx:id="txtIds" layoutX="284.0" layoutY="72.0" prefHeight="26.0" prefWidth="334.0" promptText="Enter Student ID" />
-      <JFXButton fx:id="btnUpdate" buttonType="RAISED" layoutX="465.0" layoutY="104.0" onAction="#btnUpdateOnAction" prefHeight="26.0" prefWidth="71.0" style="-fx-background-color: #2ecc71;" text="Update" textFill="WHITE" />
-      <JFXButton fx:id="btnDelete" buttonType="RAISED" layoutX="546.0" layoutY="104.0" onAction="#btnDeleteOnAction" prefHeight="26.0" prefWidth="71.0" style="-fx-background-color: #e74c3c;" text="Delete" textFill="WHITE" />
+      <JFXButton fx:id="btnUpdate" buttonType="RAISED" layoutX="465.0" layoutY="104.0" onAction="#btnUpdateOnAction" prefHeight="26.0" prefWidth="71.0" stylesheets="@../../assets/styles/userManagement.css" text="Update" textFill="WHITE" />
+      <JFXButton fx:id="btnDelete" buttonType="RAISED" layoutX="546.0" layoutY="104.0" onAction="#btnDeleteOnAction" prefHeight="26.0" prefWidth="71.0" text="Delete" textFill="WHITE" />
       <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="225.0" layoutY="79.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../assets/icons/student.png" />
