--- a/src/main/resources/view/user/dashboard-form.fxml
+++ b/src/main/resources/view/user/dashboard-form.fxml
@@ -9,74 +9,99 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="rootNode" prefHeight="623.0" prefWidth="863.0" style="-fx-background-color: #1B1464;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.user.DashboardForm">
+<AnchorPane fx:id="rootNode" prefHeight="623.0" prefWidth="863.0" style="-fx-background-color: #1f7a1f;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.user.DashboardForm">
    <children>
-      <AnchorPane fx:id="root" layoutX="4.0" layoutY="4.0" prefHeight="615.0" prefWidth="216.0" style="-fx-background-color: #1dd1a1; -fx-background-radius: 10;">
+      <AnchorPane fx:id="root" layoutX="4.0" layoutY="4.0" prefHeight="615.0" prefWidth="216.0" style="-fx-background-color: #faf6e3; -fx-background-radius: 10;">
          <children>
-            <JFXButton fx:id="btnCourseFrom" buttonType="RAISED" layoutX="10.0" layoutY="229.0" onAction="#btnCourseFormOnAction" prefHeight="200.0" prefWidth="197.0" style="-fx-background-color: #f5f6fa; -fx-border-radius: 20; -fx-background-radius: 10;">
+            <JFXButton fx:id="btnCourseFrom" buttonType="RAISED" layoutX="16.0" layoutY="104.0" onAction="#btnCourseFormOnAction" prefHeight="55.0" prefWidth="185.0" style="-fx-background-radius: 5; -fx-border-radius: 10;" stylesheets="@../../assets/styles/userDashboard.css" text="   View Program  ">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
+               <font>
+                  <Font size="15.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../assets/icons/course.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
             </JFXButton>
-            <JFXButton fx:id="btnStudentForm" buttonType="RAISED" layoutX="9.0" layoutY="19.0" onAction="#btnStudentFormnAction" prefHeight="200.0" prefWidth="197.0" style="-fx-background-color: #f5f6fa; -fx-border-radius: 20; -fx-background-radius: 10;">
+            <JFXButton fx:id="btnDashbord" buttonType="RAISED" layoutX="18.0" layoutY="535.0" onAction="#btnDashboardFormOnActin" prefHeight="32.0" prefWidth="83.0" stylesheets="@../../assets/styles/userDashboard.css" text="Dashboard">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
             </JFXButton>
-            <ImageView fitHeight="133.0" fitWidth="178.0" layoutX="19.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
+            <JFXButton fx:id="btnRegisterStudent" buttonType="RAISED" layoutX="16.0" layoutY="177.0" onAction="#btnRegisterStudentOnAction" prefHeight="55.0" prefWidth="185.0" style="-fx-background-radius: 5;" stylesheets="@../../assets/styles/userDashboard.css" text="Register Student">
+               <font>
+                  <Font size="15.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="49.0" fitWidth="49.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../assets/icons/dReg.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></JFXButton>
+            <JFXButton fx:id="btnStudentForm" buttonType="RAISED" layoutX="16.0" layoutY="31.0" onAction="#btnStudentFormnAction" prefHeight="55.0" prefWidth="185.0" style="-fx-background-radius: 5;" stylesheets="@../../assets/styles/userDashboard.css" text="Student Manage">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <font>
+                  <Font size="15.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../assets/icons/student.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </JFXButton>
+            <JFXButton fx:id="btnLogOut" buttonType="RAISED" layoutX="114.0" layoutY="536.0" onAction="#btnLogOutOnAction" prefHeight="32.0" prefWidth="83.0" stylesheets="@../../assets/styles/userDashboard.css" text="Log Out">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </JFXButton>
+            <ImageView fx:id="iconSettings" fitHeight="23.0" fitWidth="25.0" layoutX="6.0" layoutY="586.0" onMouseClicked="#iconSettionOnAction" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../assets/image/istockphoto-511773067-612x612.jpg" />
+                  <Image url="@../../assets/icons/setting.png" />
                </image>
-            </ImageView>
-            <Text layoutX="70.0" layoutY="167.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Students" wrappingWidth="71.88847351074219">
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font>
-            </Text>
-            <Text layoutX="26.0" layoutY="182.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add new Student, view Student list, update student details and delete Student in the System. " wrappingWidth="173.15171058134177">
-               <font>
-                  <Font size="12.0" />
-               </font>
-            </Text>
-            <ImageView fitHeight="133.0" fitWidth="178.0" layoutX="20.0" layoutY="240.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../assets/image/istockphoto-1479411795-612x612.jpg" />
-               </image>
-            </ImageView>
-            <Text layoutX="77.0" layoutY="375.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Courses" wrappingWidth="71.88847351074219">
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font>
-            </Text>
-            <Text layoutX="23.0" layoutY="389.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add new Course, view Course list, update Course details and delete Courses in the System. " wrappingWidth="173.15171058134177">
-               <font>
-                  <Font size="12.0" />
-               </font>
-            </Text>
-            <JFXButton fx:id="btnDashbord" buttonType="RAISED" layoutX="9.0" layoutY="440.0" onAction="#btnDashboardFormOnActin" prefHeight="55.0" prefWidth="197.0" style="-fx-background-color: #f5f6fa; -fx-background-radius: 10;" text="Dashboard">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font>
-            </JFXButton>
+            </ImageView>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="node" layoutX="224.0" layoutY="3.0" prefHeight="616.0" prefWidth="635.0" style="-fx-background-color: #ffffff; -fx-background-radius: 10;">
+      <AnchorPane fx:id="node" layoutX="224.0" layoutY="3.0" prefHeight="616.0" prefWidth="635.0" style="-fx-background-color: #fbfbfb; -fx-background-radius: 10;">
          <children>
+            <ImageView fitHeight="504.0" fitWidth="615.0" layoutX="9.0" layoutY="92.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../assets/animate/image_processing20191104-3658-12n18dk.gif" />
+               </image>
+            </ImageView>
             <Text layoutX="17.0" layoutY="63.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome..." wrappingWidth="346.5574645996094">
                <font>
                   <Font name="System Bold Italic" size="64.0" />
                </font>
             </Text>
-            <Label layoutX="54.0" layoutY="101.0" prefHeight="156.0" prefWidth="245.0" style="-fx-background-color: #f1f2f6; -fx-background-radius: 20; -fx-border-color: #130f40; -fx-border-radius: 20;" />
+            <Label layoutX="54.0" layoutY="101.0" opacity="0.11" prefHeight="156.0" prefWidth="245.0" style="-fx-background-color: #f1f2f6; -fx-background-radius: 20; -fx-border-color: #130f40; -fx-border-radius: 20;" />
             <Text fill="#0c2461" layoutX="80.0" layoutY="154.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student Count In the System :" wrappingWidth="152.00347900390625">
                <font>
                   <Font size="25.0" />
                </font>
             </Text>
-            <Label layoutX="338.0" layoutY="101.0" prefHeight="156.0" prefWidth="245.0" style="-fx-background-color: #f1f2f6; -fx-background-radius: 20; -fx-border-color: #130f40; -fx-border-radius: 20;" />
+            <Label layoutX="338.0" layoutY="101.0" opacity="0.11" prefHeight="156.0" prefWidth="245.0" style="-fx-background-color: #f1f2f6; -fx-background-radius: 20; -fx-border-color: #130f40; -fx-border-radius: 20;" />
             <Text fill="#0c2461" layoutX="364.0" layoutY="154.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Courses Count In the System :" wrappingWidth="152.00347900390625">
                <font>
                   <Font size="25.0" />
