--- a/src/main/resources/view/user/student-form.fxml
+++ b/src/main/resources/view/user/student-form.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="rootNode" prefHeight="616.0" prefWidth="636.0" style="-fx-border-radius: 10;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.user.StudentFormController">
+<AnchorPane fx:id="rootNode" prefHeight="616.0" prefWidth="636.0" style="-fx-border-radius: 10;" stylesheets="@../../assets/styles/userManagement.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.user.StudentFormController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="375.0" layoutX="6.0" layoutY="7.0" stroke="BLACK" strokeType="INSIDE" width="624.0" />
       <TextField fx:id="txtSearch" layoutX="46.0" layoutY="19.0" prefHeight="30.0" prefWidth="300.0" promptText="Search" style="-fx-border-color: #1e272e; -fx-background-radius: 5; -fx-border-radius: 5;" />
@@ -35,40 +35,28 @@
             <TableColumn fx:id="clmDob" prefWidth="73.5" text="DOB" />
         </columns>
       </TableView>
-      <TextField fx:id="txtStudentId" layoutX="12.0" layoutY="406.0" prefHeight="27.0" prefWidth="300.0" promptText="Student Id" />
-      <TextField fx:id="txtName" layoutX="323.0" layoutY="406.0" prefHeight="27.0" prefWidth="300.0" promptText="Name" />
-      <TextField fx:id="txtAddress" layoutX="12.0" layoutY="454.0" prefHeight="27.0" prefWidth="300.0" promptText="Address" />
-      <TextField fx:id="txtEmail" layoutX="323.0" layoutY="453.0" prefHeight="27.0" prefWidth="300.0" promptText="Email" />
-      <TextField fx:id="txtTelephone" layoutX="12.0" layoutY="500.0" prefHeight="27.0" prefWidth="300.0" promptText="Telephone" />
-      <TextField fx:id="txtDob" layoutX="323.0" layoutY="500.0" prefHeight="27.0" prefWidth="300.0" promptText="Date of birth" />
-      <JFXButton fx:id="btnAddToCourse" buttonType="RAISED" layoutX="26.0" layoutY="556.0" onAction="#btnAddToCourseOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #10ac84;" text="Add to Program" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="13.0" />
-         </font>
-         <graphic>
-            <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../assets/icons/add.png" />
-               </image>
-            </ImageView>
-         </graphic>
-      </JFXButton>
-      <JFXButton fx:id="btnSave" buttonType="RAISED" layoutX="323.0" layoutY="568.0" onAction="#btnSaveOnAction" prefHeight="26.0" prefWidth="67.0" style="-fx-background-color: #808e9b;" text="Save" textFill="WHITE">
+      <TextField fx:id="txtStudentId" layoutX="12.0" layoutY="413.0" prefHeight="27.0" prefWidth="300.0" promptText="Student Id" />
+      <TextField fx:id="txtName" layoutX="323.0" layoutY="413.0" prefHeight="27.0" prefWidth="300.0" promptText="Name" />
+      <TextField fx:id="txtAddress" layoutX="12.0" layoutY="468.0" prefHeight="27.0" prefWidth="300.0" promptText="Address" />
+      <TextField fx:id="txtEmail" layoutX="323.0" layoutY="468.0" prefHeight="27.0" prefWidth="300.0" promptText="Email" />
+      <TextField fx:id="txtTelephone" layoutX="12.0" layoutY="525.0" prefHeight="27.0" prefWidth="300.0" promptText="Telephone" />
+      <TextField fx:id="txtDob" layoutX="323.0" layoutY="525.0" prefHeight="27.0" prefWidth="300.0" promptText="Date of birth" />
+      <JFXButton fx:id="btnSave" buttonType="RAISED" layoutX="267.0" layoutY="568.0" onAction="#btnSaveOnAction" prefHeight="30.0" prefWidth="80.0" text="Save" textFill="WHITE">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="btnUpdate" buttonType="RAISED" layoutX="400.0" layoutY="568.0" onAction="#btnUpdateOnAction" prefHeight="26.0" prefWidth="67.0" style="-fx-background-color: #808e9b;" text="Update" textFill="WHITE">
+      <JFXButton fx:id="btnUpdate" buttonType="RAISED" layoutX="359.0" layoutY="568.0" onAction="#btnUpdateOnAction" prefHeight="30.0" prefWidth="80.0" text="Update" textFill="WHITE">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="btnDelete" buttonType="RAISED" layoutX="554.0" layoutY="568.0" onAction="#btnDeleteOnAction" prefHeight="26.0" prefWidth="67.0" style="-fx-background-color: #e55039;" text="Delete" textFill="WHITE">
+      <JFXButton fx:id="btnDelete" buttonType="RAISED" layoutX="542.0" layoutY="568.0" onAction="#btnDeleteOnAction" prefHeight="30.0" prefWidth="80.0" text="Delete" textFill="WHITE">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="btnClear" buttonType="RAISED" layoutX="477.0" layoutY="568.0" onAction="#btnClearOnAction" prefHeight="26.0" prefWidth="67.0" style="-fx-background-color: #808e9b;" text="Clear" textFill="WHITE">
+      <JFXButton fx:id="btnClear" buttonType="RAISED" layoutX="451.0" layoutY="568.0" onAction="#btnClearOnAction" prefHeight="30.0" prefWidth="80.0" text="Clear" textFill="WHITE">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
@@ -78,5 +66,11 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </JFXButton>
+      <Text layoutX="13.0" layoutY="408.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student ID :" />
+      <Text layoutX="323.0" layoutY="408.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student Name :" />
+      <Text layoutX="13.0" layoutY="464.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Address :" />
+      <Text layoutX="324.0" layoutY="464.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email :" />
+      <Text layoutX="13.0" layoutY="519.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Telephone :" />
+      <Text layoutX="324.0" layoutY="521.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date of Birth :" />
    </children>
 </AnchorPane>
