--- a/src/main/resources/view/admin/courses-form.fxml
+++ b/src/main/resources/view/admin/courses-form.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="rootNode" prefHeight="616.0" prefWidth="635.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.admin.CourseFormController">
+<AnchorPane fx:id="rootNode" prefHeight="616.0" prefWidth="635.0" stylesheets="@../../assets/styles/userManagement.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.admin.CourseFormController">
     <children>
         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="430.0" layoutX="8.0" layoutY="7.0" stroke="BLACK" strokeType="INSIDE" width="621.0" />
         <TextField fx:id="txtSearch" layoutX="48.0" layoutY="24.0" prefHeight="30.0" prefWidth="300.0" promptText="Search" style="-fx-border-color: #1e272e; -fx-background-radius: 5; -fx-border-radius: 5;" />
@@ -33,26 +33,26 @@
                 <TableColumn fx:id="clmFee" prefWidth="138.5" text="Fee(LKR)" />
             </columns>
         </TableView>
-        <TextField fx:id="txtProgramId" layoutX="12.0" layoutY="462.0" prefHeight="27.0" prefWidth="300.0" promptText="Program ID" />
-        <TextField fx:id="txtProgramName" layoutX="323.0" layoutY="462.0" prefHeight="27.0" prefWidth="300.0" promptText="Program Name" />
-        <TextField fx:id="txtDuration" layoutX="12.0" layoutY="510.0" prefHeight="27.0" prefWidth="300.0" promptText="Duration" />
-        <TextField fx:id="txtFee" layoutX="323.0" layoutY="509.0" prefHeight="27.0" prefWidth="300.0" promptText="Fee(LKR)" />
-        <Button fx:id="btnSave" layoutX="266.0" layoutY="577.0" mnemonicParsing="false" onAction="#btnSaveOnAction" prefHeight="26.0" prefWidth="80.0" style="-fx-background-color: #0984e3;" text="Save">
+        <TextField fx:id="txtProgramId" layoutX="12.0" layoutY="465.0" prefHeight="27.0" prefWidth="300.0" promptText="Program ID" />
+        <TextField fx:id="txtProgramName" layoutX="323.0" layoutY="465.0" prefHeight="27.0" prefWidth="300.0" promptText="Program Name" />
+        <TextField fx:id="txtDuration" layoutX="12.0" layoutY="526.0" prefHeight="27.0" prefWidth="300.0" promptText="Duration" />
+        <TextField fx:id="txtFee" layoutX="323.0" layoutY="526.0" prefHeight="27.0" prefWidth="300.0" promptText="Fee(LKR)" />
+        <Button fx:id="btnSave" layoutX="251.0" layoutY="573.0" mnemonicParsing="false" onAction="#btnSaveOnAction" prefHeight="30.0" prefWidth="85.0" text="Save">
             <font>
                 <Font name="System Bold Italic" size="13.0" />
             </font>
         </Button>
-        <Button fx:id="btnUpdate" layoutX="358.0" layoutY="577.0" mnemonicParsing="false" onAction="#btnUpdateOnAction" prefHeight="26.0" prefWidth="80.0" style="-fx-background-color: #2ed573;" text="Update">
+        <Button fx:id="btnUpdate" layoutX="346.0" layoutY="573.0" mnemonicParsing="false" onAction="#btnUpdateOnAction" prefHeight="30.0" prefWidth="85.0" text="Update">
             <font>
                 <Font name="System Bold Italic" size="13.0" />
             </font>
         </Button>
-        <Button fx:id="btnDelete" layoutX="541.0" layoutY="577.0" mnemonicParsing="false" onAction="#btnDeleteOnAction" prefHeight="26.0" prefWidth="80.0" style="-fx-background-color: #e74c3c;" text="Delete">
+        <Button fx:id="btnDelete" layoutX="536.0" layoutY="573.0" mnemonicParsing="false" onAction="#btnDeleteOnAction" prefHeight="30.0" prefWidth="85.0" text="Delete">
             <font>
                 <Font name="System Bold Italic" size="13.0" />
             </font>
         </Button>
-        <Button fx:id="btnClear" layoutX="450.0" layoutY="577.0" mnemonicParsing="false" onAction="#btnClearOnAction" prefHeight="26.0" prefWidth="80.0" style="-fx-background-color: #f6e58d;" text="Clear">
+        <Button fx:id="btnClear" layoutX="441.0" layoutY="573.0" mnemonicParsing="false" onAction="#btnClearOnAction" prefHeight="30.0" prefWidth="85.0" text="Clear">
             <font>
                 <Font name="System Bold Italic" size="13.0" />
             </font>
@@ -62,6 +62,10 @@
                 <Font name="System Bold Italic" size="13.0" />
             </font>
         </Button>
+      <Text layoutX="13.0" layoutY="460.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Program ID:" />
+      <Text layoutX="324.0" layoutY="460.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Program Name:" />
+      <Text layoutX="12.0" layoutY="522.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Program Duration:" />
+      <Text layoutX="323.0" layoutY="521.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Program Fee(LKR):" />
     </children>
 
 </AnchorPane>
