--- a/src/main/resources/view/register-form.fxml
+++ b/src/main/resources/view/register-form.fxml
@@ -2,6 +2,7 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXComboBox?>
+<?import java.net.URL?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -11,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="node" prefHeight="351.0" prefWidth="277.0" style="-fx-background-color: #dcdde1; -fx-background-radius: 10;" stylesheets="@../assets/styles/registerStyle.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.RegisterFormController">
+<AnchorPane fx:id="node" prefHeight="351.0" prefWidth="277.0" style="-fx-background-color: #dcdde1; -fx-background-radius: 10;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.RegisterFormController">
    <children>
       <Circle fill="#1dd1a1" layoutX="137.0" layoutY="-42.0" radius="134.0" stroke="#1dd1a1" strokeType="INSIDE" />
       <Text layoutX="10.0" layoutY="28.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Register">
@@ -36,4 +37,8 @@
       <JFXComboBox fx:id="cmbAccountType" layoutX="14.0" layoutY="78.0" onAction="#cmbAccountTypeOnAction" prefHeight="26.0" prefWidth="251.0" promptText="Select account type" />
       <PasswordField fx:id="txtConfirmPassword" layoutX="14.0" layoutY="290.0" prefHeight="26.0" prefWidth="250.0" promptText="Confirm Password" />
    </children>
+   <stylesheets>
+      <URL value="@../assets/styles/registerStyle.css" />
+      <URL value="@../assets/styles/style.css" />
+   </stylesheets>
 </AnchorPane>
